update media creation logic

--- a/qt_design/main_window.ui
+++ b/qt_design/main_window.ui
@@ -2323,7 +2323,8 @@ QSlider::handle:horizontal {
                        </property>
                        <property name="styleSheet">
                         <string notr="true">QPushButton{color: white; background-color: rgb(50,50,50); border-radius:15px;border-color: rgb(50,50,50);border-width: 1px;border-style: solid;}
-QPushButton:pressed{color: white; background-color: rgb(25,25,25); border-radius:15px;border-color: rgb(25,25,25);border-width: 1px;border-style: solid;}</string>
+QPushButton:pressed{color: white; background-color: rgb(25,25,25); border-radius:15px;border-color: rgb(25,25,25);border-width: 1px;border-style: solid;}
+QPushButton:disabled{color: white; background-color: black; border-radius:15px;border-color: rgb(50,50,50);border-width: 1px;border-style: solid;}</string>
                        </property>
                        <property name="text">
                         <string>Generate</string>
